--- a/index.html
+++ b/index.html
@@ -12,22 +12,40 @@
     <title>Four Card Feature</title>
   </head>
   <body>
-    <!-- Reliable, efficient delivery
-  Powered by Technology
+    <header class="page-header">
+      <h1>Reliable, efficient delivery</h1>
+      <h2>Powered by Technology</h2>
+    </header>
+    <main>
+      <section class="features" aria-label="Our Technology Features">
+        <article class="card supervisor-card">
+          <h3>Supervisor</h3>
+          <p>Monitors activity to identify project roadblocks</p>
+          <img src="./images/icon-supervisor.svg" alt="" aria-hidden="true" />
+        </article>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+        <article class="card team-builder-card">
+          <h3>Team Builder</h3>
+          <p>
+            Scans our talent network to create the optimal team for your project
+          </p>
+          <img src="./images/icon-team-builder.svg" alt="" aria-hidden="true" />
+        </article>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+        <article class="card karma-card">
+          <h3>Karma</h3>
+          <p>Regularly evaluates our talent to ensure quality</p>
+          <img src="./images/icon-karma.svg" alt="" aria-hidden="true" />
+        </article>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates -->
+        <article class="card calculator-card">
+          <h3 class="card-title">Calculator</h3>
+          <p class="card-desc">
+            Uses data from past projects to provide better delivery estimates
+          </p>
+          <img src="./images/icon-calculator.svg" alt="" aria-hidden="true" />
+        </article>
+      </section>
+    </main>
   </body>
 </html>
