--- a/index.html
+++ b/index.html
@@ -9,38 +9,53 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Four Card Feature</title>
+    <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
     <header class="page-header">
-      <h1>Reliable, efficient delivery</h1>
-      <h2>Powered by Technology</h2>
+      <h1 class="text-preset-2">Reliable, efficient delivery</h1>
+      <h2 class="text-preset-1">Powered by Technology</h2>
+      <p class="text-preset-4">
+        Our Artificial Intelligence powered tools use millions of project data
+        points to ensure that your project is successful
+      </p>
     </header>
     <main>
       <section class="features" aria-label="Our Technology Features">
         <article class="card supervisor-card">
-          <h3>Supervisor</h3>
-          <p>Monitors activity to identify project roadblocks</p>
+          <h3 class="text-preset-3">Supervisor</h3>
+          <p class="text-preset-5">
+            Monitors activity to identify project roadblocks
+          </p>
           <img src="./images/icon-supervisor.svg" alt="" aria-hidden="true" />
         </article>
 
         <article class="card team-builder-card">
-          <h3>Team Builder</h3>
-          <p>
+          <h3 class="text-preset-3">Team Builder</h3>
+          <p class="text-preset-5">
             Scans our talent network to create the optimal team for your project
           </p>
           <img src="./images/icon-team-builder.svg" alt="" aria-hidden="true" />
         </article>
 
         <article class="card karma-card">
-          <h3>Karma</h3>
-          <p>Regularly evaluates our talent to ensure quality</p>
+          <h3 class="text-preset-3">Karma</h3>
+          <p class="text-preset-5">
+            Regularly evaluates our talent to ensure quality
+          </p>
           <img src="./images/icon-karma.svg" alt="" aria-hidden="true" />
         </article>
 
         <article class="card calculator-card">
-          <h3 class="card-title">Calculator</h3>
-          <p class="card-desc">
+          <h3 class="text-preset-3">Calculator</h3>
+          <p class="text-preset-5">
             Uses data from past projects to provide better delivery estimates
           </p>
           <img src="./images/icon-calculator.svg" alt="" aria-hidden="true" />
