feat: implement features component styling and responsive grid layout

--- a/index.html
+++ b/index.html
@@ -27,14 +27,19 @@
         points to ensure that your project is successful
       </p>
     </header>
-    <main>
+    <main class="container">
       <section class="features" aria-label="Our Technology Features">
         <article class="card supervisor-card">
           <h3 class="text-preset-3">Supervisor</h3>
           <p class="text-preset-5">
             Monitors activity to identify project roadblocks
           </p>
-          <img src="./images/icon-supervisor.svg" alt="" aria-hidden="true" />
+          <img
+            src="./images/icon-supervisor.svg"
+            alt=""
+            width="64"
+            height="64"
+          />
         </article>
 
         <article class="card team-builder-card">
@@ -42,7 +47,12 @@
           <p class="text-preset-5">
             Scans our talent network to create the optimal team for your project
           </p>
-          <img src="./images/icon-team-builder.svg" alt="" aria-hidden="true" />
+          <img
+            src="./images/icon-team-builder.svg"
+            alt=""
+            width="64"
+            height="64"
+          />
         </article>
 
         <article class="card karma-card">
@@ -50,7 +60,7 @@
           <p class="text-preset-5">
             Regularly evaluates our talent to ensure quality
           </p>
-          <img src="./images/icon-karma.svg" alt="" aria-hidden="true" />
+          <img src="./images/icon-karma.svg" alt="" width="64" height="64" />
         </article>
 
         <article class="card calculator-card">
@@ -58,7 +68,12 @@
           <p class="text-preset-5">
             Uses data from past projects to provide better delivery estimates
           </p>
-          <img src="./images/icon-calculator.svg" alt="" aria-hidden="true" />
+          <img
+            src="./images/icon-calculator.svg"
+            alt=""
+            width="64"
+            height="64"
+          />
         </article>
       </section>
     </main>
